--- a/paper/manuscript/misc/ref.bib
+++ b/paper/manuscript/misc/ref.bib
@@ -68,3 +68,365 @@
     pages = {2306},
     url = {https://joss.theoj.org/papers/10.21105/joss.02306},
   }
+
+@article{shaffer2017overview,
+  title={An overview of heart rate variability metrics and norms},
+  author={Shaffer, Fred and Ginsberg, Jay P},
+  journal={Frontiers in public health},
+  pages={258},
+  year={2017},
+  publisher={Frontiers}
+}
+
+@article{bigger1996heart,
+  title={Heart rate variability},
+  author={Bigger Jr, J Thomas},
+  journal={Circulation},
+  volume={94},
+  number={11},
+  pages={3011--3012},
+  year={1996},
+  publisher={New York, NY: Grune \& Stratton, c1950-}
+}
+
+@article{stanley2013cardiac,
+  title={Cardiac parasympathetic reactivation following exercise: implications for training prescription},
+  author={Stanley, Jamie and Peake, Jonathan M and Buchheit, Martin},
+  journal={Sports medicine},
+  volume={43},
+  number={12},
+  pages={1259--1277},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{michael2017cardiac,
+  title={Cardiac autonomic responses during exercise and post-exercise recovery using heart rate variability and systolic time intervals—a review},
+  author={Michael, Scott and Graham, Kenneth S and Davis, Glen M},
+  journal={Frontiers in physiology},
+  volume={8},
+  pages={301},
+  year={2017},
+  publisher={Frontiers Media SA}
+}
+
+@article{griesbach2004voluntary,
+  title={Voluntary exercise following traumatic brain injury: brain-derived neurotrophic factor upregulation and recovery of function},
+  author={Griesbach, Grace S and Hovda, DA and Molteni, R and Wu, A and Gomez-Pinilla, F},
+  journal={Neuroscience},
+  volume={125},
+  number={1},
+  pages={129--139},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{martinez2021neurophysiological,
+  title={Neurophysiological Stress Response and Mood Changes Induced by High-Intensity Interval Training: A Pilot Study},
+  author={Mart{\'\i}nez-D{\'\i}az, Inmaculada C and Carrasco, Luis},
+  journal={International Journal of Environmental Research and Public Health},
+  volume={18},
+  number={14},
+  pages={7320},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{fontolliet2018testing,
+  title={Testing the vagal withdrawal hypothesis during light exercise under autonomic blockade: a heart rate variability study},
+  author={Fontolliet, Timoth{\'e}e and Pichot, Vincent and Bringard, Aur{\'e}lien and Fagoni, Nazzareno and Adami, Alessandra and Tam, Enrico and Furlan, Raffaello and Barth{\'e}l{\'e}my, Jean-Claude and Ferretti, Guido},
+  journal={Journal of Applied Physiology},
+  volume={125},
+  number={6},
+  pages={1804--1811},
+  year={2018},
+  publisher={American Physiological Society Bethesda, MD}
+}
+
+@article{freeman2006autonomic,
+  title={Autonomic nervous system interaction with the cardiovascular system during exercise},
+  author={Freeman, James V and Dewey, Frederick E and Hadley, David M and Myers, Jonathan and Froelicher, Victor F},
+  journal={Progress in cardiovascular diseases},
+  volume={48},
+  number={5},
+  pages={342--362},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{michael2016submaximal,
+  title={Submaximal exercise intensity modulates acute post-exercise heart rate variability},
+  author={Michael, Scott and Jay, Ollie and Halaki, Mark and Graham, Kenneth and Davis, Glen M},
+  journal={European Journal of Applied Physiology},
+  volume={116},
+  number={4},
+  pages={697--706},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{holmes2022comparison,
+  title={Comparison of Heart Rate Variability Responses to Varying Resistance Exercise Volume-Loads},
+  author={Holmes, Clifton J and MacDonald, Hayley V and Esco, Michael R and Fedewa, Michael V and Wind, Stefanie A and Winchester, Lee J},
+  journal={Research Quarterly for Exercise and Sport},
+  volume={93},
+  number={2},
+  pages={391--400},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
+
+@article{mancia2014autonomic,
+  title={The autonomic nervous system and hypertension},
+  author={Mancia, Giuseppe and Grassi, Guido},
+  journal={Circulation research},
+  volume={114},
+  number={11},
+  pages={1804--1814},
+  year={2014},
+  publisher={Am Heart Assoc}
+}
+
+@article{lucini2022relationship,
+  title={Relationship between Body Composition and Cardiac Autonomic Regulation in a Large Population of Italian Olympic Athletes},
+  author={Lucini, Daniela and Spataro, Antonio and Giovanelli, Luca and Malacarne, Mara and Spada, Raffaella and Parati, Gianfranco and Solaro, Nadia and Pagani, Massimo},
+  journal={Journal of Personalized Medicine},
+  volume={12},
+  number={9},
+  pages={1508},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{allen2012training,
+  title={Training and racing with a power meter (pp. 39--52)},
+  author={Allen, H and Coggan, A},
+  journal={Boulder, CO: VeloPress},
+  year={2012}
+}
+
+@article{borszcz2018functional,
+  title={Functional threshold power in cyclists: validity of the concept and physiological responses},
+  author={Borszcz, Fernando Klitzke and Tramontin, Artur Ferreira and Bossi, Arthur Henrique and Carminatti, Lorival Jos{\'e} and Costa, Vitor Pereira},
+  journal={International journal of sports medicine},
+  volume={39},
+  number={10},
+  pages={737--742},
+  year={2018},
+  publisher={{\copyright} Georg Thieme Verlag KG}
+}
+
+@article{mackey2021known,
+  title={What is known about the FTP20 test related to cycling? A scoping review},
+  author={Mackey, Jon and Horner, Katy},
+  journal={Journal of Sports Sciences},
+  volume={39},
+  number={23},
+  pages={2735--2745},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+
+@article{buckinx2015concordance,
+  title={Concordance between muscle mass assessed by bioelectrical impedance analysis and by dual energy X-ray absorptiometry: a cross-sectional study},
+  author={Buckinx, Fanny and Reginster, Jean-Yves and Dardenne, Nadia and Croisiser, Jean-Louis and Kaux, Jean-Fran{\c{c}}ois and Beaudart, Charlotte and Slomian, Justine and Bruy{\`e}re, Olivier},
+  journal={BMC musculoskeletal disorders},
+  volume={16},
+  number={1},
+  pages={1--7},
+  year={2015},
+  publisher={BioMed Central}
+}
+
+@article{park2020assessment,
+  title={Assessment of body water distribution in patients with sepsis during fluid resuscitation using multi-frequency direct segmental bioelectrical impedance analysis},
+  author={Park, Inwon and Lee, Jae Hyuk and Jang, Dong-Hyun and Kim, Joonghee and Hwang, Bo Rah and Kim, Seoyoung and Lee, Ji Eun and Jo, You Hwan},
+  journal={Clinical Nutrition},
+  volume={39},
+  number={6},
+  pages={1826--1831},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{buchheit2010monitoring,
+  title={Monitoring endurance running performance using cardiac parasympathetic function},
+  author={Buchheit, Martin and Chivot, A and Parouty, J and Mercier, D and Al Haddad, H and Laursen, PB and Ahmaidi, S},
+  journal={European journal of applied physiology},
+  volume={108},
+  number={6},
+  pages={1153--1167},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{berntson1997heart,
+  title={Heart rate variability: origins, methods, and interpretive caveats},
+  author={Berntson, Gary G and Thomas Bigger Jr, J and Eckberg, Dwain L and Grossman, Paul and Kaufmann, Peter G and Malik, Marek and Nagaraja, Haikady N and Porges, Stephen W and Saul, J Philip and Stone, Peter H and others},
+  journal={Psychophysiology},
+  volume={34},
+  number={6},
+  pages={623--648},
+  year={1997},
+  publisher={Wiley Online Library}
+}
+
+@article{buchheit2006cardiac,
+  title={Cardiac parasympathetic regulation: respective associations with cardiorespiratory fitness and training load},
+  author={Buchheit, Martin and Gindre, Cyrille},
+  journal={American Journal of Physiology-Heart and Circulatory Physiology},
+  volume={291},
+  number={1},
+  pages={H451--H458},
+  year={2006},
+  publisher={American Physiological Society}
+}
+
+@article{malik1996heart,
+  title={Heart rate variability: Standards of measurement, physiological interpretation, and clinical use: Task force of the European Society of Cardiology and the North American Society for Pacing and Electrophysiology},
+  author={Malik, Marek},
+  journal={Annals of Noninvasive Electrocardiology},
+  volume={1},
+  number={2},
+  pages={151--181},
+  year={1996},
+  publisher={Wiley Online Library}
+}
+
+@article{fisher2014heart,
+  title={Heart rate variability at limiting stationarity: evidence of neuro-cardiac control mechanisms operating at ultra-low frequencies},
+  author={Fisher, AC and Groves, D and Eleuteri, A and Mesum, P and Patterson, D and Taggart, P},
+  journal={Physiological Measurement},
+  volume={35},
+  number={2},
+  pages={309},
+  year={2014},
+  publisher={IOP Publishing}
+}
+
+@article{mccraty2015heart,
+  title={Heart rate variability: new perspectives on physiological mechanisms, assessment of self-regulatory capacity, and health risk},
+  author={McCraty, Rollin and Shaffer, Fred},
+  journal={Global advances in health and medicine},
+  volume={4},
+  number={1},
+  pages={46--61},
+  year={2015},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{goldstein2011low,
+  title={Low-frequency power of heart rate variability is not a measure of cardiac sympathetic tone but may be a measure of modulation of cardiac autonomic outflows by baroreflexes},
+  author={Goldstein, David S and Bentho, Oladi and Park, Mee-Yeong and Sharabi, Yehonatan},
+  journal={Experimental physiology},
+  volume={96},
+  number={12},
+  pages={1255--1261},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{akselrod1981power,
+  title={Power spectrum analysis of heart rate fluctuation: a quantitative probe of beat-to-beat cardiovascular control},
+  author={Akselrod, Solange and Gordon, David and Ubel, F Andrew and Shannon, Daniel C and Berger, A Clifford and Cohen, Richard J},
+  journal={science},
+  volume={213},
+  number={4504},
+  pages={220--222},
+  year={1981},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{berntson1997heart,
+  title={Heart rate variability: origins, methods, and interpretive caveats},
+  author={Berntson, Gary G and Thomas Bigger Jr, J and Eckberg, Dwain L and Grossman, Paul and Kaufmann, Peter G and Malik, Marek and Nagaraja, Haikady N and Porges, Stephen W and Saul, J Philip and Stone, Peter H and others},
+  journal={Psychophysiology},
+  volume={34},
+  number={6},
+  pages={623--648},
+  year={1997},
+  publisher={Wiley Online Library}
+}
+
+@article{rajendra2006heart,
+  title={Heart rate variability: a review},
+  author={Rajendra Acharya, U and Paul Joseph, K and Kannathal, Natarajan and Lim, Choo Min and Suri, Jasjit S},
+  journal={Medical and biological engineering and computing},
+  volume={44},
+  number={12},
+  pages={1031--1051},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{yoo2021heart,
+  title={Heart rate variability-measured stress and academic achievement in medical students},
+  author={Yoo, Hyo Hyun and Yune, So Jung and Im, Sun Ju and Kam, Bee Sung and Lee, Sang Yeoup},
+  journal={Medical Principles and Practice},
+  volume={30},
+  number={2},
+  pages={193--200},
+  year={2021},
+  publisher={Karger Publishers}
+}
+
+@misc{baevsky2008methodical,
+  title={Methodical recommendations use kardivar system for determination of the stress level and estimation of the body adaptability standards of measurements and physiological interpretation},
+  author={Baevsky, RM and Berseneva, AP},
+  year={2008},
+  publisher={Moscow}
+}
+
+@article{mujika2016effects,
+  title={Effects of increased muscle strength and muscle mass on endurance-cycling performance.},
+  author={Mujika, I{\~n}igo and R{\o}nnestad, Bent R and Martin, David T},
+  journal={IJSPP},
+  volume={2015},
+  number={0405},
+  pages={3},
+  year={2016}
+}
+
+@article{suarez2002causes,
+  title={Causes of sudden death during sports activities in Spain},
+  author={Su{\'a}rez-Mier, M Paz and Aguilera, Beatriz},
+  journal={Revista espa{\~n}ola de cardiolog{\'\i}a},
+  volume={55},
+  number={4},
+  pages={347--358},
+  year={2002},
+  publisher={EDICIONES DOYMA SA TRAV DE GRACIA 17-21, 08021 BARCELONA, SPAIN}
+}
+
+@article{al2019metabolic,
+  title={Metabolic profiling of elite athletes with different cardiovascular demand},
+  author={Al-Khelaifi, Fatima and Donati, Francesco and Botr{\`e}, Francesco and Latiff, Aishah and Abraham, David and Hingorani, Aroon and Georgakopoulos, Costas and Suhre, Karsten and Yousri, Noha A and Elrayess, Mohamed A},
+  journal={Scandinavian Journal of Medicine \& Science in Sports},
+  volume={29},
+  number={7},
+  pages={933--943},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+@article{porges1995cardiac,
+  title={Cardiac vagal tone: a physiological index of stress},
+  author={Porges, Stephen W},
+  journal={Neuroscience \& Biobehavioral Reviews},
+  volume={19},
+  number={2},
+  pages={225--233},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@article{tarvainen2014kubios,
+  title={Kubios HRV--heart rate variability analysis software},
+  author={Tarvainen, Mika P and Niskanen, Juha-Pekka and Lipponen, Jukka A and Ranta-Aho, Perttu O and Karjalainen, Pasi A},
+  journal={Computer methods and programs in biomedicine},
+  volume={113},
+  number={1},
+  pages={210--220},
+  year={2014},
+  publisher={Elsevier}
+}
